--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
