--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
